--- a/todo/src/components/Todo.css
+++ b/todo/src/components/Todo.css
@@ -9,10 +9,17 @@ body {
 
 body {
     background-image: 
-    url("https://images.unsplash.com/photo-1488998427799-e3362cec87c3?ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80");
+    url("https://images.pexels.com/photos/351961/pexels-photo-351961.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
     background-size: cover;
-    background-repeat: no-repeat;
- 
+    background-repeat: no-repeat; 
+}
+
+h1{
+    margin-top: 12%;
+    display: flex;
+    margin-left: 8%;
+    color: #3c3c3c;
+    font-weight: bold;
 }
 
 h2{
@@ -25,29 +32,20 @@ p,span {
   font-family: 'Roboto', sans-serif;
 }
 
-.todo-list{
-    display:flex;
+
+.todo-list {
+    display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 4%;
-}
-
+    margin-top: 0%;
+    margin-right: 74%;
+    margin-left: 8%;}
 
 .App {
   font-family: sans-serif;
   text-align: center;
-  padding: 0 36px;
-  max-width: 665px;
   margin: 0 auto;
 }
-
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-direction: column;
-}
-
 
 .item {
   background-color: #9489cea3;;
@@ -65,33 +63,34 @@ p,span {
   text-decoration: line-through;
 }
 form {
-  width: 50%;
-  display: flex;
-  justify-content: flex-end;
+    width: 34%;
 }
+
 form > input {
-  background-color:white;
-  border: 0;
-  border-radius: 0.5em;
-  padding: 6px 0;
-  font-size: 1rem;
-  width: 31vw;
-  height: 5vh;
-  outline: 0;
-  color: #4c4aa5;;
-  margin-right: 8px;
-  margin-left: 8%;
+    background-color: white;
+    border: 0;
+    border-radius: 0.5em;
+    padding: 0.375rem 0;
+    font-size: 1rem;
+    width: 17vw;
+    height: 5vh;
+    outline: 0;
+    color: #4c4aa5;
+    margin-right: 5%;
+    margin-left: 8%;
+    margin-top: 1%;
 }
 
 button {
-  background-color: #95abea;;
-  border: 1px solid #95abea;;
-  color: white;
-  font-size: 16px;
-  padding: 6px 14px;
-  height: 5vh;
-  border-radius: 0.8em;
-  opacity: 0.95;
+    background-color: #95abea;
+    border: 1px solid #95abea;
+    color: white;
+    font-size: 1rem;
+    padding: 0.375rem 0.875rem;
+    height: 6.75vh;
+    border-radius: 0.8em;
+    opacity: 0.95;
+    width: 16%;
 }
 
 input::placeholder {
@@ -100,5 +99,5 @@ input::placeholder {
 }
 
 .clear-button {
-  margin-top: 16px;
+    margin-right: 64%;
 }
